# rust-all-in-one-2022-archived

./: .gitignore  .tarpaulin.toml  .travis.yml  Cargo.toml  README.md  cargo-graph.dot  clippy.toml  codecov.yml  justfile  requirements.txt  rust-toolchain.toml  rust.json  rustfmt.toml
.github/workflows/: ci.yml  rust.yml  test.yml
bcrypt/: packtpub-7day-6d-add_03-04.lnk
borrowchecker/lifetime/: index-rust-doc-generic-bound-lifetime.rs
borrowchecker/lifetime/global-state/code-like-pro-sync/code-like-pro-6.6-atomic/src/: lib.rs
borrowchecker/lifetime/packtpub-7day-3d-trim/src/: lib.rs
borrowchecker/ownership/code-like-pro-5.2-ownership/src/: main.rs
collection/linkdelist/: code-like-pro-5.7-singlylinkedlist-immutable.lnk  rust-doc_linked-list.rs
collection/list-custom/: rc.lnk
collection/list-custom/Index-code-like-pro-5.5-singlylinkedlist/src/: main.rs
collection/list-custom/packtpub-7day-3d-tree/src/: lib.rs
conversion/: rustegg-as_ref_mut.rs  rustegg-from_into.rs
conversion/cast/as/: rustegg-using_as.rs
crate/mod/: rust-doc-mod-path1.rs  rust-doc-path-underscore1.rs  rust-doc-use-path1.rs  rust-doc-use-visibility1.rs
expression/: rust-doc_return_blockexp_let_to_let.rs  rust-doc_scope_in_scope.rs
flowcontrol/while/: rust-doc_while.rs
functional-programming/closure/: easyrust--closure1.rs  easyrust-closure-moe-multithread.rs  easyrust-fnmut.rs  easyrust-fnonce.rs  easyrust-return-closure.rs  index-easyrust-return-closure2.rs  index-rust-doc-clousure2-cacher.rs  rust-doc-capture.rs  rust-doc-closure-traitobject.rs  rust-doc-clousure1.rs  rust-doc-clousure2-cacher.rs  rust-doc-experimental.rs  rust-doc-map.rs
grammer/dtolnay/: 10.rs  11.rs  14.rs  16.rs  17.rs  19.rs  21.rs  22.rs  23.rs  24.rs  25.rs  26.rs  27.rs  4.rs  6.rs  7.rs  8.rs  9.rs
io/file/: pgrep.lnk  rust-in-action-filebasics.lnk
oop/design_patterns/behavioral/: lpxxn-iterator.rs  lpxxn-observer.rs
oop/design_patterns/behavioral/state-pattern/: rust-doc-state-behavioral1.rs  rust-doc-state-behavioral2-using-type-system.rs
oop/polimorphism/: 5.rs
oop/polymorphism/dynamic-dispatch/trait-object/: rust-doc-trait-object-poymorphism1.rs
ops/packtpub-7day-2d-intro/src/: main.rs
performance/dynamic-dispatchable-vs-static/: medium-dyn-static-no-inline.rs  medium-inline.rs
projects/: ch4-usage-counters-6.lnk  r3-rust-project-shop_base.lnk  r3-rust-project-shop_site.lnk  rust-in-action-ch5-cpu3.lnk
projects/packtpub-7day-projects/packpub-7day-3d-projects/: packtpub-7day-3d-tree.lnk
projects/packtpub-7day-projects/packpub-7day-4d-projects/: packtpub-7day-4d-btreemap.lnk
projects/packtpub-7day-projects/packpub-7day-6d-projects/: packtpub-7day-6d-ass_5.lnk
projects/packtpub-7day-projects/packpub-7day-7d-projects/: rocket-html.lnk
projects/packtpub-7day-projects/packtpub-7day-5d-projects/: packtpub-7day-5d-thread-arc.lnk
projects/r3-rust-project-projects/: r3-rust-project-asref.lnk  r3-rust-project-chatbox.lnk  r3-rust-project-mdrend.lnk  r3-rust-project-projects-chat_serv.lnk
random/: rust-in-action-filebasics.lnk
return/packtpub-7day-1d-result/src/: main.rs
shallow-copy-clone/code-like-pro-5.3-shallow-and-deep-copies/src/: main.rs
src/: aggregator.rs  hello.rs  main.md  main.rs
thread/sync/arc/: rustegg-arc1.rs
thread/sync/sharestate/: index-rust-doc-16-15-arc-mutex.rs  rust-doc-16-12-smartpointer-mutex-single-thread.rs  rust-doc-16-13-multiple-thread-sharing-data-mutex.rs
time/: ch4-usage-counters-6.lnk  ch4-usage-counters-6.rs
trait/associateType/: rust-doc-associatetype1.rs
trait/call/: rust-doc-call-fullyqualifiedsyntax2.rs
trait/imp/: index-rust-doc-10-14-shared-behavior.rs  rust-doc-generic-imp-constraits1.rs  rust-doc-generic-imp-not-constraits1.rs  rust-doc-imp2.rs  rust-doc.multi-imp.rs
trait/non-objectsafe/: rust-doc-non-obj-safe1.rs  rust-doc-non-obj-safe2.rs  rust-doc-non-obj-safe3.rs
trait/objectsafe/dispatchable /: rust-doc-supertrait1.rs
trait/objectsafe/non-dispatchable/: rust-doc-non-dispatchable1.rs
trait/rsh/: rust-doc-rhs1.rs
trait/shared-behavior/rust-doc-10-14-summary-trait/: aggregator.rs  main.rs
trait/shared-behavior/trait_bound/: index-rust-doc-10-14-summary-trait-with-bound.rs  rust-doc-trait-bound1.rs
trait/subtrait /: rust-doc-subtrait1.rs  rust-doc-subtrait2.rs
trait/superTrait/: rust-doc-supertrait-multi-trait.rs
tuple/code-like-pro-4.5-tuple-basics/src/: main.rs
types/capture/: rust-doc-capture-mut-borrow.rs
types/clippy/: rustegg-clippy1.rs  rustegg-clippy2.rs
types/closure/: rust-doc-closure-0.rs  rust-doc-closure-1.rs  rust-doc-closure-2.rs
types/code-like-pro-4.5-integer-types/: Cargo.toml
types/composite/struct/packtpub-7day-1d-structs/src/: main.rs
types/composite/tuple/code-like-pro-4.5-tuple-swap/src/: main.rs
types/number/: rust-doc_operators_literal.rs
types/type-parameters/: rust-doc-type-param.rs
unsafe/extern-FFI/: rust-doc-extern-func.rs
unsafe/safe-abstraction/: rust-doc-unsafe-in-safe-abstraction.rs
utils/: iterator-stepper.rs  mac-mystring.rs
web/actix/r3-rust-project-shop_site/: .env
