[package]
name = "rust-starter"
version = "1.0.0"
autobins = true
authors = ["ArmanRiazi <arman2riazi@gmail.com>"]
edition = "2021"
repository = "https://github.com/armanriazi/rust-all-in-one"
readme = "README.md"
license = "MIT"
#keywords = ["cli", "starter"]
description = """
Rust Starter aims to provide high quality components to bootstrap your Rust CLI Project. It includes a battery of most used libraries; and defines a set of Rust best practices.
"""

[workspace]
members = [
    #"utils",
    #"cli",
    #"core",
    #"examples_packtpub-learn-rust-in-7-days",
    #"examples-egg",
    #"examples-rust-doc",
    #"examples-rust-in-action",
    #"examples-tourofrust",
]

[dependencies]
#subproject = { path = "./subproject" }
#examples_packtpub-learn-rust-in-7-days = { path = "examples_packtpub-learn-rust-in-7-days" }
#examples-egg = { path = "examples-egg"}
#examples-rust-doc = { path = "examples-rust-doc"}
#examples-rust-in-action = { path = "examples-rust-in-action"}
#examples-tourofrust = { path = "examples-tourofrust"}


# core = { path = "core" }
rayon = "1.0.0"
human-panic = "1.0.3"
better-panic = "0.3.0"
log = "0.4.11"
slog-scope = "4.3.0"
slog-stdlog = "4.1.0"
num = "0.4.0"
rand = "0.8.5"
error-chain = "0.12.4"
reqwest = "0.11.10"
blocking = "1.2.0"
serde = "1.0.136"
regex = "1.1.0"
clap = "3.1.6"
failure = "0.1.5"
lazy_static = "1.4.0"
crossbeam = "0.8.1"
list = "0.1.3"

#rocket
#rocket_codegen = "0.3.17"
#cookie="0.9.1"
#rocket = "0.3.17"
chrono = "0.4.11"
rocket = "0.4.4"
serde_derive = "1.0"
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
#Tokio
futures = "0.1.25"
tokio = "0.1.16"
tokio-channel = "0.1.0"
[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
proptest = "1.0.0"

#[[bin]]
#name = "cool-tool"
#path="./src/bin/"
#test = true
#bench = false

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

