[package]
name = "rust-all-in-one"
version = "1.0.0"
autobins = true
authors = ["ArmanRiazi <arman2riazi@gmail.com>"]
edition = "2021"
repository = "https://github.com/armanriazi/rust-all-in-one"
readme = "README.md"
license = "MIT"
description = """
Rust All In One aims to provide high quality components to bootstrap your Rust CLI Project. It includes a battery of most used libraries; and defines a set of Rust best practices.
"""
keywords = ["msrv", "rust-version", "toolchain", "find", "minimum"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]


#[features]
#default = ["rust-releases-dist-source"]
#rust-releases-dist-source = ["rust-releases/rust-releases-rust-dist"]

[package.metadata]
msrv="1.31.0"

[package.metadata.release]
tag-name = "v{{version}}"

[workspace]
members = [
    #"utils",
    #"cli",
    #"core",
    #"examples_packtpub-learn-rust-in-7-days",
    #"examples-egg",
    #"examples-rust-doc",
    #"examples-rust-in-action",
    #"examples-tourofrust",
]

[dependencies]
#subproject = { path = "./subproject" }
#examples_packtpub-learn-rust-in-7-days = { path = "examples_packtpub-learn-rust-in-7-days" }
#examples-egg = { path = "examples-egg"}
#examples-rust-doc = { path = "examples-rust-doc"}
#examples-rust-in-action = { path = "examples-rust-in-action"}
#examples-tourofrust = { path = "examples-tourofrust"}
# core = { path = "core" }

minigrep = "0.1.0"
#cargo-graph = "0.3.1"
# UI
console = "0.15.0"
indicatif = "0.16.2"

# json output
json = "0.12.4"

# read Cargo.toml
toml_edit = "0.14.4"

dirs = "4.0.0"
tracing = "0.1"
tracing-appender = "0.2"

# building package graphs, consider moving to guppy once rust_version is supported
cargo_metadata = "0.14.2"
petgraph = "0.6.1"
comfy-table = "5.0.1"

once_cell = "1.12.0"
thiserror = "1.0.31"

bisector = "0.4.0"

rayon = "1.0.0"
human-panic = "1.0.3"
better-panic = "0.3.0"
log = "0.4.11"
slog-scope = "4.3.0"
slog-stdlog = "4.1.0"
num = "0.4.0"
rand = "0.8.5"
error-chain = "0.12.4"
reqwest = "0.11.10"
blocking = "1.2.0"
serde = "1.0.136"
regex = "1.1.0"
clap = "3.1.6"
failure = "0.1.5"
lazy_static = "1.4.0"
crossbeam = "0.8.1"
list = "0.1.3"
metrohash = "1.0.6"

#rocket
#rocket_codegen = "0.3.17"
#cookie="0.9.1"
#rocket = "0.3.17"
#chrono = "0.4.11"
#rocket = "0.4.4"
serde_derive = "1.0"
#[dependencies.rocket_contrib]
#version = "0.4.4"
#default-features = false
#features = ["json"]
#Tokio
#futures = "0.1.25"
#tokio = "0.1.16"
#tokio-channel = "0.1.0"


[build]
target = "stable-x86_64-unknown-linux-gnu"

[dev-dependencies]

assert_cmd = "2.0.4"
predicates = "2.1.1"
proptest = "1.0.0"
# Used for parsing cli arguments.
clap = { version = "3.1.18", features = ["derive"] }

#[[bin]]
#name = "cool-tool"
#path="./src/bin/"
#test = true
#bench = false

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The documentation profile, used for `cargo doc`.
[profile.doc]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
incremental = true
overflow-checks = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json"]

# Get the available rust versions
[dependencies.rust-releases]
version = "0.22.0"
default-features = false
features = ["rust-releases-rust-changelog"]